Fix minor errors, add drop shadow to popup, images - popup appears behind top header in mobile view. - em font style mismatch (needs to be normal) - header appears behind map - fix positioning of popup on window resize (mobile view) - edit extraImgCount to go up to 9 extra images

--- a/landing.css
+++ b/landing.css
@@ -56,6 +56,7 @@
     width: 1000px;
     height: 300px;
     border-radius: 32px;
+    filter: drop-shadow(10px 10px 0.3rem rgba(0, 0, 0, 0.2));
 }
 
 #subscribeinfo {
@@ -83,6 +84,7 @@
     border-radius: 42px;
     object-fit: cover;
     margin: 12px 0;
+    filter: drop-shadow(10px 10px 0.3rem rgba(0, 0, 0, 0.2));
 }
 
 .menu-horz-flex {
@@ -167,7 +169,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: 20;
+    z-index: 51;
     display: none;
 }
 
@@ -182,6 +184,7 @@
     align-content: center;
     transform: scale(0);
     transition: .6s opacity, .6s ease;
+    filter: drop-shadow(0 0 0.8rem rgba(0, 0, 0, 0.2));
 }
 
 .article-popup {
@@ -249,6 +252,14 @@
     justify-content: center;
 }
 
+.article-flex-center {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-content: center;
+    align-self: center;
+}
+
 .form-subscribe {
     display: flex;
     flex-direction: row;
@@ -282,12 +293,6 @@
     border-radius: 1000px;
 }
 
-/*
-section, header, footer {
-    display: flex;
-    flex-direction: row;
-}*/
-
 .h2-main {
     font: 48px Kanit, sans-serif;
     font-weight: 500;
@@ -313,6 +318,7 @@ section, header, footer {
 
 em {
     color: #D97652;
+    font-style: normal;
 }
 
 h2 {
@@ -335,14 +341,6 @@ table {
     white-space: normal
 }
 
-.article-flex-center {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-content: center;
-    align-self: center;
-}
-
 article {
     text-align: left;
 }
@@ -355,6 +353,7 @@ span {
 
 header {
     background: #F2E9D8;
+    z-index: 49;
 }
 
 body {
@@ -459,5 +458,15 @@ body {
     header {
         position: sticky;
         top: 0;
+    }
+
+    .div-popup-bg {
+        align-content: center;
+    }
+
+    .div-popup {
+        margin: auto;
+        padding: 12px;
+        width: 90%;
     }
 }
